Split 4 oversized topic files into navigation hubs + sub-files
gc/index.md (4426 → 383 lines):
- Converted to navigation hub with GC selection guide, comparison
  table, JEP timeline, parameter cheat sheet, diagnostics
- Deep content already in g1-gc.md/zgc.md/shenandoah.md/cms.md

amber/index.md (1400 → 902 lines + 3 new files):
- switch-patterns.md (275): Switch/Pattern evolution (JEP 325→441)
- text-blocks.md (135): Text Blocks (JEP 355→378)
- stream-gatherers.md (175): Stream Gatherers (JEP 461→485)

jit/index.md (1329 → 507 lines + 2 new files):
- c2-optimizations.md (239): Ideal Graph, IGVN, loop opts
- aot-evolution.md (171): JEP 295 → GraalVM → Project Leyden
- (escape-analysis.md and inlining.md already existed)

concurrency/index.md (1312 → 553 lines + 3 new files):
- synchronized-internals.md (201): thin/fat lock, JEP 374/491
- juc-deep-dive.md (308): AQS, ConcurrentHashMap, ForkJoinPool
- virtual-threads-guide.md (223): anti-patterns, migration

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>